finito quicksort